[package]
name = "dejadupe"
version = "0.2.0"
edition = "2024"
description = "A fast CLI for finding, reviewing, deleting, and copying files without duplicates"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.103"
blake3 = "1.8.5"
clap = { version = "4.6.2", features = ["derive"] }
indicatif = "0.18.6"
rayon = "1.12.0"
walkdir = "2.5.0"
